# SPDX-FileCopyrightText: 2024 Romain Brault <mail@romainbrault.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "test-map-linux-py312-test"
description = "A Python package."
keywords = [
    "Python",
]
license = "MIT OR Apache-2.0"

license-files.paths = [
    "LICENSES/MIT.txt",
    "LICENSES/Apache-2.0.txt",
]
maintainers = [
    { name = "Romain Brault", email = "mail@romainbrault.com" },
]
authors = [
    { name = "Romain Brault", email = "mail@romainbrault.com" },
]
requires-python = ">=3.12,<4.0"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Framework :: tox",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [  ]

[tool.uv]
managed = true
dev-dependencies = [
    "scalene>=1.5.19",
    "pynvim>=0.4.3",
    "beartype>=0.18.5",
    "hypothesis>=6.110.1",
    "pylint>=3.2.6",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "xdoctest>=1.2.0",
]
